<?xml version="1.0"?>
<package format="2">
  <name>mower2smarthome</name>
  <version>0.0.0</version>
  <description>The mower2smarthome package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="elmar@familie-elflein.de">ene9ba</maintainer>
  <license>CC BY-NC-SA 4.0</license>
  <url type="website">https://github.com/ClemensElflein/OpenMower</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mower_logic</build_depend>
  <build_depend>mower_msgs</build_depend>
  <build_depend>mqtt_bridge</build_depend>
  <build_depend>open_mower</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>mower_logic</build_export_depend>
  <build_export_depend>mower_msgs</build_export_depend>
  <build_export_depend>mqtt_bridge</build_export_depend>
  <build_export_depend>open_mower</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>mower_logic</exec_depend>
  <exec_depend>mower_msgs</exec_depend>
  <exec_depend>mqtt_bridge</exec_depend>
  <exec_depend>open_mower</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
